--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </header>
 
         <div class="demo-warning">
-            ⚠️Esta é uma versão de demonstração do site. Os conteúdos e funcionalidades apresentados estão sujeitos a mudanças e podem não estar presentes na versão final.
+            <p class="warning-demo">⚠️Esta é uma versão de demonstração do site. Os conteúdos e funcionalidades apresentados estão sujeitos a mudanças e podem não estar presentes na versão final.</p>
         </div>
     </div>
     <nav>
